# ValidationModel

./: .gitignore  README.md  main.py  pyproject.toml
src/validator/_models/: bert_base_classifier.py  classifier.py  zero_shot_classifier.py
