[project]
name = "validationmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio-health-checking>=1.74.0",
    "grpcio-reflection>=1.74.0",
    "grpcio-tools>=1.74.0",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "opentelemetry-instrumentation-grpc>=0.58b0",
    "transformers>=4.56.1",
]
